--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 
 before_script:
   - brew update
-  - sudo softwareupdate -a -i
+  - sudo softwareupdate -i -r
 script:
   - mkdir -p "$HOMEBREW_TAP_DIR"
   - rm -rf "$HOMEBREW_TAP_DIR"
